# paper-trader

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: watchlist.toml
docs/: CODE_REVIEW_IMPROVEMENTS_001.md  PAPER_TRADER_ARCH_001.md
docs/gate_reports/: LIVE_OPERATION_COMPLETION_REPORT.md  ROUTING_DESIGN_AUDIT_FINDINGS_001.md  STAGE0_BUILD_NOTE.md  STAGE0_COMPLETION_REPORT.md  STAGE0_GATE_REPORT.md  STAGE1_COMPLETION_REPORT.md  STAGE1_FRONTIER_COMPLETION_REPORT.md  STAGE1_FRONTIER_GATE_REPORT.md  STAGE1_GATE_REPORT.md  T01_GATE_REPORT.md  T02_T04_GATE_REPORT.md  T04_thesis_report.md  T6B_SETTLEMENT_RUN_REPORT.md  T6_LIVE_RUN_REPORT.md  WAVE1_COMPLETION_REPORT.md  WAVE2.5_COMPLETION_REPORT.md  WAVE2_COMPLETION_REPORT.md  WAVE3_COMPLETION_REPORT.md  WAVE4_COMPLETION_REPORT.md  WAVE5_COMPLETION_REPORT.md  WAVE6_COMPLETION_REPORT.md
docs/steward/: DT-4.2_freeze_checklist.md  PAPER_TRADER_ARCH_002.md  README.md  STEWARD_ALTERNATIVES_REGISTER_001.md  STEWARD_FRAMEWORK_SPEC_001.md  STEWARD_PAPER_TRADER_RECONCILE_001.md  (+1 more)
scripts/: fetch_backtest_data.py  run_live.py  run_stage0.py  run_stage1.py  run_stage1_frontier.py  thesis_backtest.py
tests/: test_analytics_math.py  test_attesting_router.py  test_backtest_methods.py  test_configurable_router.py  test_connections.py  test_content_hash.py  test_cycle_id_ulid.py  test_dc1_boundary.py  test_domain_models.py  test_dt125_acceptance.py  test_emission_neutrality.py  test_end_to_end_cycle.py  test_equity_freeze.py  test_execute_agent.py  test_filter_agent.py  test_gate_approve_fork.py  test_gate_read.py  test_gate_reconcile.py  test_gate_ritual_reject.py  test_harness.py  test_header_emission.py  test_invocation_emission.py  test_lifecycle_and_review.py  test_live_config.py  test_live_data_clients.py  test_llm_selector.py  test_model_tiers.py  test_null_selector.py  test_observer_node_neutrality.py  test_observer_runner.py  test_officer_predicates.py  test_offline_seam.py  test_ollama_client.py  test_postmortem_agent.py  test_predict_agent.py  test_proposer.py  test_replay_hash_verify.py  test_replay_markdown.py  test_replay_reader.py  test_replay_sufficiency.py  (+15 more)
(+114 files in other folders)
