[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-trader"
version = "0.1.0"
description = "Multi-agent paper trading bot for stocks and crypto. Sandbox #2 for the World Agents framework."
requires-python = ">=3.11"
dependencies = [
    # Core framework (matches oracle-agents)
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    # LLM clients (matches oracle-agents)
    "groq>=0.4.0",
    "google-generativeai>=0.4.0",
    # New google-genai SDK — the copied gemini_client.py imports `google.genai`
    # (oracle-agents migrated to this SDK). See T01 gate report deviations.
    "google-genai>=1.0.0",
    # Market data (NEW for paper-trader)
    "yfinance>=0.2.40",
    "finnhub-python>=2.4.20",
    "pycoingecko>=3.1.0",
    # News + sentiment (matches oracle-agents)
    "feedparser>=6.0.10",
    "vaderSentiment>=3.3.2",
    # httpx — transitive dependency of the copied data/news.py
    "httpx>=0.27.0",
    # Numerics
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Parquet engine for the backtest OHLCV cache (T02)
    "pyarrow>=15.0.0",
    # Config
    "tomli>=2.0.0; python_version<'3.11'",
    # Skill content is serialized as YAML in the skill-version rows (I-9);
    # the steward loader (DT-10.2) parses it.
    "pyyaml>=6.0",
    # ULID cycle_id (DT-4.1): monotonic, ordered, 26-char TEXT ids for replay.
    "python-ulid>=2.0",
    "anthropic>=0.116.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "types-requests",
]

[project.scripts]
paper-trader-cycle = "paper_trader.run_cycle:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_trader", "src/steward"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
